--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ From the beginning of freshman year...
 
 <div class="video-parent-parent2">
 <div class="video-parent2">
-  <video class="video2" src="./freshman.mp4" controls autoplay></video>
+  <video class="video2" src="./freshman.MP4" controls autoplay></video>
 </div>
 </div>
 
@@ -44,7 +44,7 @@ and through the end of senior year...
 
 <div class="video-parent-parent3">
 <div class="video-parent3">
-  <video class="video3" src="./senior.mp4" controls autoplay></video>
+  <video class="video3" src="./senior.MP4" controls autoplay></video>
 </div>
 </div><br>
 
@@ -75,7 +75,7 @@ we always stuck together, and we never fell out of being weird--we were always j
 
 <div class="middle">
 <img class="small-pic1" src="./us1.jpg"/>
-<img class="small-pic2" src="./us2.jpg"/>
+<img class="small-pic2" src="./us2.JPG"/>
 <img class="small-pic2" src="./us3.jpg"/>
 </div>
 
@@ -85,7 +85,7 @@ we always stuck together, and we never fell out of being weird--we were always j
 
 <div class="video-parent-parent4">
 <div class="video-parent4">
-  <video class="video4" src="./eating.mp4" controls autoplay></video>
+  <video class="video4" src="./eating.MP4" controls autoplay></video>
 </div>
 </div><br>
 
